test/fixtures/syntax-error/good.ts
import { broken } from './bad';

export const x = 1;
